# agent

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
skills/coder/: SKILL.md
skills/hello/: SKILL.md
skills/hello/src/: hello.py
skills/new_skill/: SKILL.md
skills/skill-creator/: SKILL.md  SKILL_TEMPLATE.md
skills/youtube-transcript/: SKILL.md
skills/youtube-transcript/src/: get_transcript.py
src/agent/: __init__.py  ai_agent.py  bash_exec.py  browser_use.py  browser_use_cli.py  cli.py  config.py  conversation_utils.py  dir_io.py  error_handling.py  file_io.py  help_utils.py  http_client.py  prompt_utils.py  python_exec.py  skill.py  streaming.py  tool_utils.py
